<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/View"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/viewHeader"
            style="@style/ViewHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question" />

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-6869992474017983/4806197152" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/questionScrollView"
        style="@style/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/questionText"
                style="@style/QuestionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/answersFrame"
                style="@style/ButtonFrame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="5dp" />

            <Button
                android:id="@+id/nextQuestionButton"
                style="@style/NextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="nextQuestionButtonClickHandler"
                android:text="@string/next_question"
                android:visibility="gone" />

            <Button
                android:id="@+id/completeButton"
                style="@style/CompleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:onClick="completeButtonClickHandler"
                android:text="@string/complete_round"
                android:visibility="gone" />

            <TextView
                android:id="@+id/questionDescriptionText"
                style="@style/QuestionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>